@@ -1,6 +1,6 @@
 DIST maven-build-context-2.1_pre20070611.tar.bz2 11162 RMD160 312ed38afbfb29fec300735a4b6913413624766f SHA1 47dc0af86cfc081e428cb052d4183e0c1af31a39 SHA256 925157f742fab4dd75e5cd5f8e383b2db8929febf9f08a2133eaad97a6ce320e
 DIST maven-build-context-2.1_pre20071021.tar.bz2 15744 RMD160 82d2c0c56357f01bbe646993b7dff1d721359a2d SHA1 6e267b0bf0cc4d27afd0c90974ab7c25447b1ecc SHA256 8865bec563ccee79ae77a396878e33eae5d845a459e8ca2d1df6b9ea4438e746
 EBUILD maven-build-context-2.1_pre20070611.ebuild 745 RMD160 88a053104054f9d75b6d7f4aa5cb0521d1395978 SHA1 1f59539631b3bae0d2480af92a790052042788c6 SHA256 746314609d3794b3999903e4b076294f3fa34b066f497ce66c31ba85af4cc7b0
-EBUILD maven-build-context-2.1_pre20071021.ebuild 791 RMD160 357b48eac235e35a6afdfdc39955a639d0992876 SHA1 6ce16c030d8a9f45f74894d54e403d38cada1d24 SHA256 794ea157733ee5c93c5983f7a8d2736d669f57faf7939f6ca0a78ae181687ac7
-MISC ChangeLog 454 RMD160 15e431c78b0d7a519f5587f2dd28a57b40b98403 SHA1 e6942a12876e91ab6607ebc13b780efd70d0d5f7 SHA256 ad692faefa91bd04ef930d8751ccf79dee391a70848c40c939df5264f1c12a05
+EBUILD maven-build-context-2.1_pre20071021.ebuild 847 RMD160 f3b8e6fac5fd9c2af83d91bff0b694ea1667f6ae SHA1 aa58597c0bd7c364fb8902648897cd590abbceaa SHA256 221e6ef1c9d440ea3bc6b961a027d53a219f805e40ad6cefc6bea0e047227a72
+MISC ChangeLog 561 RMD160 eb65e329f56a7ab87637a2a5801e48ab5fd99983 SHA1 fccd1248e842d864da9d7bdec105de0d6123b529 SHA256 6d1cd3d8b21be6a756f1bc0fe85f575697d5005b73deb76b11609eb0039baf0f
 MISC metadata.xml 157 RMD160 ab0b3741457dee7531f59c4da0f0e9e8399af084 SHA1 c37a6b9922aef61b5b3387655bccb6e3b16e0e26 SHA256 295d02c5805b0257938eb80314b371daac94b8d6ea85629a902de7a824adc0c9
