@@ -15,16 +15,16 @@ SLOT="0"
 KEYWORDS="~amd64 ~x86"
 IUSE=""
 COMMON_DEPS="
->=dev-java/plexus-container-default-1.0.33
->=dev-java/plexus-component-api-1.0.33
->=dev-java/plexus-utils-1.4.7
+>=dev-java/plexus-container-default-1.0_alpha33_pre20071021
+>=dev-java/plexus-component-api-1.0_alpha33_pre20071021
+>=dev-java/plexus-utils-1.4.7_pre20071021
 "
 DEPEND=">=virtual/jdk-1.4 ${COMMON_DEPS}"
 RDEPEND=">=virtual/jre-1.4 ${COMMON_DEPS}"
 JAVA_MAVEN_CLASSPATH="
-plexus-container-default-1.0.33
-plexus-component-api-1.0.33
+plexus-container-default-1.0_alpha33
 plexus-utils-1.4.7
+plexus-component-api-1.0_alpha33
 "
 
 JAVA_PKG_SRC_DIRS="src/main/java/*"
